<resources>
    <string name="app_name">Diabetes App</string>
    <string name="title_activity_patient__login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_logo">korta</string>
    <string name="action_sign_in_back">CANCEL</string>
    <string name="title_activity_doctor_login">Doctor Login</string>
    <string name="patients">Patients</string>
    <string name="title_activity_doctor_dashboard">Doctor Dashboard</string>
    <string name="patient">Patient</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="phone_number">+123 456 789 234</string>
    <string name="patient_caps">PATIENT</string>
    <string name="empty_state_doctor">Add a patient and they will show up here.</string>
    <string name="session">session</string>
    <string name="patient_id">patient_id</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_diastole">Diastole</string>
    <string name="prompt_systole">Systole</string>
    <string name="prompt_blood_sugar">Blood Sugar</string>
</resources>
